added event search page

--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -24,7 +24,10 @@
           <a class="nav-link waves-light" mdbRippleRadius routerLink="/prices" id="a_prices">{{ 'NAV.PRICES' | translate }} </a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link waves-light" mdbRippleRadius routerLink="/search" id="a_prices">{{ 'NAV.SEARCH' | translate }} </a>
+          <a class="nav-link waves-light" mdbRippleRadius routerLink="/search-photographer" id="a_prices">{{ 'NAV.SEARCH_PHOTOGRAPHER' | translate }} </a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link waves-light" mdbRippleRadius routerLink="/search-events" id="a_prices">{{ 'NAV.SEARCH_EVENTS' | translate }} </a>
         </li>
       </ul>
 
