--- a/src/app/components/dashboard-event-card/dashboard-event-card.component.html
+++ b/src/app/components/dashboard-event-card/dashboard-event-card.component.html
@@ -48,7 +48,7 @@
   <div class="card-data text-left">
     <ul>
       <li>
-        <i class="fa fa-clock-o"></i>{{ event.date }}</li>
+        <i class="fa fa-clock-o"></i>{{ &nbsp;event.date }}</li>
     </ul>
   </div>
   <!-- Card footer -->
