--- a/src/app/components/event-user/event-user.component.html
+++ b/src/app/components/event-user/event-user.component.html
@@ -39,14 +39,15 @@
 
   <mdb-tab heading="{{ 'TEXTS.EVENT_SELECTED_PICTURES' | translate}}">
     <div class="row no-gutters justify-content-start" style="align-items: center">
-
+      <br>
+      <br>
       <div class="col-1 offset-md-11">
-        <a class="icon-button lessVertical" id="button_two_pictures_per_row" (click)="this.templateMarked = this.imgBigMarked" style="color: #3f51b5">
+        <a class="icon-button lessVertical" id="button_two_pictures_per_row" (click)="this.templateMarked = this.imgBigMarked" style="color: #e91e63">
           <i class="fa fa-th-large fa-2x" aria-hidden="true"></i>
         </a>
         &nbsp;&nbsp;
         <a class="icon-button lessVertical" id="button_three_pictures_per_row" (click)="this.templateMarked = this.imgSmalMarked"
-          style="color: #3f51b5">
+          style="color: #e91e63">
           <i class="fa fa-th fa-2x" aria-hidden="true"></i>
         </a>
       </div>
