--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">Made with
       <i class="fa fa-heart" styl="color: red" aria-hidden="true"></i>
       © 2017-2018 Copyright:
-      <a routerLink="/"> eventpicking.de </a>
+      <a routerLink="/"> EventPicKing.de </a>
     </div>
   </div>
 
