--- a/src/app/pages/page-not-found/page-not-found.component.html
+++ b/src/app/pages/page-not-found/page-not-found.component.html
@@ -8,7 +8,7 @@
         <strong>4</strong>
       </p>
       <h1>{{ 'TEXTS.PAGE_NOT_FOUND' | translate }}</h1>
-      <p class="section-description lead grey-text">{{ 'TEXTS.PAGE_NOT_FOUND_DESCRIPTION' | translate }}</p>
+      <p class="section-description grey-text">{{ 'TEXTS.PAGE_NOT_FOUND_DESCRIPTION' | translate }}</p>
     </div>
   </div>
 </div>
