--- a/src/app/pages/data-protection-page/data-protection-page.component.html
+++ b/src/app/pages/data-protection-page/data-protection-page.component.html
@@ -5,7 +5,9 @@
 
         <section class="section feature-box text-left">
           <h1>Datenschutzerkl&auml;rung</h1>
-          <h2>Datenschutz</h2>
+          <br>
+          <br>
+          <h4>Datenschutz</h4>
           <p>Die Betreiber dieser Seiten nehmen den Schutz Ihrer pers&ouml;nlichen Daten sehr ernst. Wir behandeln Ihre personenbezogenen
             Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerkl&auml;rung.
           </p>
@@ -16,8 +18,8 @@
           <p>Wir weisen darauf hin, dass die Daten&uuml;bertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitsl&uuml;cken
             aufweisen kann. Ein l&uuml;ckenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht m&ouml;glich.</p>
           <p>&nbsp;</p>
-          <h2>
-            Cookies</h2>
+          <h4>
+            Cookies</h4>
           <p>Die Internetseiten verwenden teilweise so genannte Cookies. Cookies richten auf Ihrem Rechner keinen Schaden an
             und enthalten keine Viren. Cookies dienen dazu, unser Angebot nutzerfreundlicher, effektiver und sicherer zu
             machen. Cookies sind kleine Textdateien, die auf Ihrem Rechner abgelegt werden und die Ihr Browser speichert.</p>
@@ -30,8 +32,8 @@
             sowie das automatische L&ouml;schen der Cookies beim Schlie&szlig;en des Browser aktivieren. Bei der Deaktivierung
             von Cookies kann die Funktionalit&auml;t dieser Website eingeschr&auml;nkt sein.</p>
           <p>&nbsp;</p>
-          <h2>Server-Log- Files
-          </h2>
+          <h4>Server-Log- Files
+          </h4>
           <p>Der Provider der Seiten erhebt und speichert automatisch Informationen in so genannten Server-Log Files, die Ihr
             Browser automatisch an uns &uuml;bermittelt. Dies sind:</p>
           <ul>
@@ -47,13 +49,13 @@
             wird nicht vorgenommen. Wir behalten uns vor, diese Daten nachtr&auml;glich zu pr&uuml;fen, wenn uns konkrete
             Anhaltspunkte f&uuml;r eine rechtswidrige Nutzung bekannt werden.</p>
           <p>&nbsp;</p>
-          <h2>Kontaktformular</h2>
+          <h4>Kontaktformular</h4>
           <p>Wenn Sie uns per Kontaktformular Anfragen zukommen lassen, werden Ihre Angaben aus dem Anfrageformular inklusive
             der von Ihnen dort angegebenen Kontaktdaten zwecks Bearbeitung der Anfrage und f&uuml;r den Fall von Anschlussfragen
             bei uns gespeichert. Diese Daten geben wir nicht ohne Ihre Einwilligung weiter.</p>
           <p>&nbsp;</p>
-          <h2>Google Analytics
-          </h2>
+          <h4>Google Analytics
+          </h4>
           <p>Diese Website nutzt Funktionen des Webanalysedienstes Google Analytics. Anbieter ist die Google Inc., 1600 Amphitheatre
             Parkway Mountain View, CA 94043, USA.</p>
           <p>Google Analytics verwendet so genannte &quot;Cookies&quot;. Das sind Textdateien, die auf Ihrem Computer gespeichert
@@ -109,7 +111,7 @@
             Anzeigeneinstellungen in Ihrem Google-Konto deaktivieren oder die Erfassung Ihrer Daten durch Google Analytics
             wie im Punkt &ldquo;Widerspruch gegen Datenerfassung&rdquo; dargestellt generell untersagen.</p>
           <p>&nbsp;</p>
-          <h2>etracker</h2>
+          <h4>etracker</h4>
           <p>Unsere Webseite nutzt den Analysedienst etracker. Anbieter ist die etracker GmbH, Erste Brunnenstra&szlig;e 1,
             20459 Hamburg Germany. Aus den Daten k&ouml;nnen unter einem Pseudonym Nutzungsprofile erstellt werden. Dazu
             k&ouml;nnen Cookies eingesetzt werden. Bei Cookies handelt es sich um kleine Textdateien, die lokal im Zwischenspeicher
@@ -130,12 +132,11 @@
             <a href="https://www.etracker.com/de/datenschutz.html">https://www.etracker.com/de/datenschutz.html</a>
           </p>
           <p>&nbsp;</p>
-          <h2>Facebook-Plugins (Like-Button)</h2>
+          <h4>Facebook-Plugins (Like-Button)</h4>
           <p>Auf unseren Seiten sind Plugins des sozialen Netzwerks Facebook, Anbieter Facebook Inc., 1 Hacker Way, Menlo Park,
             California 94025, USA, integriert. Die Facebook-Plugins erkennen Sie an dem Facebook-Logo oder dem "Like-Button"
             ("Gef&auml;llt mir") auf unserer Seite. Eine &Uuml;bersicht &uuml;ber die Facebook-Plugins finden Sie hier:
-            <a
-              href="https://developers.facebook.com/docs/plugins/">
+            <a href="https://developers.facebook.com/docs/plugins/">
               https://developers.facebook.com/docs/plugins/</a>.</p>
           <p>Wenn Sie unsere Seiten besuchen, wird &uuml;ber das Plugin eine direkte Verbindung zwischen Ihrem Browser und dem
             Facebook-Server hergestellt. Facebook erh&auml;lt dadurch die Information, dass Sie mit Ihrer IP-Adresse unsere
@@ -149,7 +150,7 @@
           <p>Wenn Sie nicht w&uuml;nschen, dass Facebook den Besuch unserer Seiten Ihrem Facebook-Nutzerkonto zuordnen kann,
             loggen Sie sich bitte aus Ihrem Facebook- Benutzerkonto aus.</p>
           <p>&nbsp;</p>
-          <h2>Twitter</h2>
+          <h4>Twitter</h4>
           <p>Auf unseren Seiten sind Funktionen des Dienstes Twitter eingebunden. Diese Funktionen werden angeboten durch die
             Twitter Inc., 1355 Market Street, Suite 900, San Francisco, CA 94103, USA. Durch das Benutzen von Twitter und
             der Funktion "Re- Tweet" werden die von Ihnen besuchten Webseiten mit Ihrem Twitter-Account verkn&uuml;pft und
@@ -162,7 +163,7 @@
             <a href="https://twitter.com/account/settings">
               https://twitter.com/account/settings</a> &auml;ndern.</p>
           <p>&nbsp;</p>
-          <h2>Google+</h2>
+          <h4>Google+</h4>
           <p>Unsere Seiten nutzen Funktionen von Google+. Anbieter ist die Google Inc., 1600 Amphitheatre Parkway Mountain View,
             CA 94043, USA.</p>
           <p>Erfassung und Weitergabe von Informationen: Mithilfe der Google+-Schaltfl&auml;che k&ouml;nnen Sie Informationen
@@ -185,7 +186,7 @@
             m&ouml;glicherweise zusammengefasste Statistiken &uuml;ber die +1-Aktivit&auml;ten der Nutzer bzw. gibt diese
             an Nutzer und Partner weiter, wie etwa Publisher, Inserenten oder verbundene Websites.</p>
           <p>&nbsp;</p>
-          <h2>Instagram</h2>
+          <h4>Instagram</h4>
           <p>Auf unseren Seiten sind Funktionen des Dienstes Instagram eingebunden. Diese Funktionen werden angeboten durch
             die Instagram Inc., 1601 Willow Road, Menlo Park, CA, 94025, USA integriert. Wenn Sie in Ihrem Instagram-Account
             eingeloggt sind k&ouml;nnen Sie durch Anklicken des Instagram-Buttons die Inhalte unserer Seiten mit Ihrem Instagram-Profil
@@ -198,7 +199,7 @@
           </p>
           <p>
             &nbsp;</p>
-          <h2>LinkedIn</h2>
+          <h4>LinkedIn</h4>
           <p>Unsere Website nutzt Funktionen des Netzwerks LinkedIn. Anbieter ist die LinkedIn Corporation, 2029 Stierlin Court,
             Mountain View, CA 94043, USA. Bei jedem Abruf einer unserer Seiten, die Funktionen von LinkedIn enth&auml;lt,
             wird eine Verbindung zu Servern von LinkedIn aufbaut. LinkedIn wird dar&uuml;ber informiert, dass Sie unsere
@@ -210,7 +211,7 @@
             <a href="https://www.linkedin.com/legal/privacy-policy">https://www.linkedin.com/legal/privacy-policy</a>
           </p>
           <p>&nbsp;</p>
-          <h2>Pinterest</h2>
+          <h4>Pinterest</h4>
           <p>Auf unserer Seite verwenden wir Social Plugins des sozialen Netzwerkes Pinterest, das von der Pinterest Inc., 808
             Brannan Street San Francisco, CA 94103-490, USA ("Pinterest") betrieben wird. Wenn Sie eine Seite aufrufen, die
             ein solches Plugin enth&auml;lt, stellt Ihr Browser eine direkte Verbindung zu den Servern von Pinterest her.
@@ -225,7 +226,7 @@
               https://about.pinterest.com/de/privacy-policy</a>
           </p>
           <p>&nbsp;</p>
-          <h2>XING</h2>
+          <h4>XING</h4>
           <p>Unsere Webseite nutzt Funktionen des Netzwerks XING. Anbieter ist die XING AG, Dammtorstra&szlig;e 29-32, 20354
             Hamburg, Deutschland. Bei jedem Abruf einer unserer Seiten, die Funktionen von XING enth&auml;lt, wird eine Verbindung
             zu Servern von XING hergestellt. Eine Speicherung von personenbezogenen Daten erfolgt dabei nach unserer Kenntnis
@@ -236,7 +237,7 @@
               https://www.xing.com/app/share?op=data_protection</a>
           </p>
           <p>&nbsp;</p>
-          <h2>Tumblr</h2>
+          <h4>Tumblr</h4>
           <p>
             Unsere Seiten nutzen Schaltfl&auml;chen des Dienstes Tumblr. Anbieter ist die Tumblr, Inc., 35 East 21st St, 10th Floor,
             New York, NY 10010, USA. Diese Schaltfl&auml;chen erm&ouml;glichen es Ihnen, einen Beitrag oder eine Seite bei
@@ -248,24 +249,26 @@
             <a href="https://www.tumblr.com/policy/de/privacy">
               https://www.tumblr.com/policy/de/privacy</a>.</p>
           <p>&nbsp;</p>
-          <h2>YouTube</h2>
+          <h4>YouTube</h4>
           <p>Unsere Webseite nutzt Plugins der von Google betriebenen Seite YouTube. Betreiber der Seiten ist die YouTube, LLC,
             901 Cherry Ave., San Bruno, CA 94066, USA. Wenn Sie eine unserer mit einem YouTube-Plugin ausgestatteten Seiten
             besuchen, wird eine Verbindung zu den Servern von YouTube hergestellt. Dabei wird dem Youtube-Server mitgeteilt,
             welche unserer Seiten Sie besucht haben.</p>
           <p>Wenn Sie in Ihrem YouTube-Account eingeloggt sind erm&ouml;glichen Sie YouTube, Ihr Surfverhalten direkt Ihrem
             pers&ouml;nlichen Profil zuzuordnen. Dies k&ouml;nnen Sie verhindern, indem Sie sich aus Ihrem YouTube-Account
-            ausloggen.</p>
+            ausloggen.
+          </p>
           <p>Weitere Informationen zum Umgang von Nutzerdaten finden Sie in der Datenschutzerkl&auml;rung von YouTube unter:
             <a href="https://www.google.de/intl/de/policies/privacy">https://www.google.de/intl/de/policies/privacy</a>
           </p>
           <p>&nbsp;</p>
-          <h2>Kommentarfunktion auf dieser Webseite</h2>
+          <h4>Kommentarfunktion auf dieser Webseite</h4>
           <p>F&uuml;r die Kommentarfunktion auf dieser Seite werden neben Ihrem Kommentar auch Angaben zum Zeitpunkt der Erstellung
             des Kommentars, Ihre E-Mail-Adresse und, wenn Sie nicht anonym posten, der von Ihnen gew&auml;hlte Nutzername
-            gespeichert.</p>
+            gespeichert.
+          </p>
           <p>&nbsp;</p>
-          <h2>SSL-Verschl&uuml;sselung</h2>
+          <h4>SSL-Verschl&uuml;sselung</h4>
           <p>Diese Seite nutzt aus Gr&uuml;nden der Sicherheit und zum Schutz der &Uuml;bertragung vertraulicher Inhalte, wie
             zum Beispiel der Anfragen, die Sie an uns als Seitenbetreiber senden, eine SSL-Verschl&uuml;sselung. Eine verschl&uuml;sselte
             Verbindung erkennen Sie daran, dass die Adresszeile des Browsers von &quot;https://&quot; auf &quot;https://&quot;
@@ -274,21 +277,23 @@
           <p>Wenn die SSL Verschl&uuml;sselung aktiviert ist, k&ouml;nnen die Daten, die Sie an uns &uuml;bermitteln, nicht
             von Dritten mitgelesen werden.</p>
           <p>&nbsp;</p>
-          <h2>Recht auf Auskunft, L&ouml;schung, Sperrung</h2>
+          <h4>Recht auf Auskunft, L&ouml;schung, Sperrung</h4>
           <p>Sie haben jederzeit das Recht auf unentgeltliche Auskunft &uuml;ber Ihre gespeicherten personenbezogenen Daten,
             deren Herkunft und Empf&auml;nger und den Zweck der Datenverarbeitung sowie ein Recht auf Berichtigung, Sperrung
             oder L&ouml;schung dieser Daten. Hierzu sowie zu weiteren Fragen zum Thema personenbezogene Daten k&ouml;nnen
             Sie sich jederzeit unter der im Impressum angegebenen Adresse an uns wenden.</p>
           <p>&nbsp;</p>
-          <h2>
-            Widerspruch Werbe-Mails</h2>
+          <h4>
+            Widerspruch Werbe-Mails</h4>
           <p>Der Nutzung von im Rahmen der Impressumspflicht ver&ouml;ffentlichten Kontaktdaten zur &Uuml;bersendung von nicht
             ausdr&uuml;cklich angeforderter Werbung und Informationsmaterialien wird hiermit widersprochen. Die Betreiber
             der Seiten behalten sich ausdr&uuml;cklich rechtliche Schritte im Falle der unverlangten Zusendung von Werbeinformationen,
             etwa durch Spam-E-Mails, vor.</p>
-          <p>&nbsp;</p>
-          <p>Quelle:
-            <a href="https://www.e-recht24.de">e-recht24.de</a>
+
+          <br>
+          <br>
+          <p style="font-size: 11px">Quelle:
+            <a href="https://www.e-recht24.de">www.e-recht24.de</a>
           </p>
         </section>
       </div>
