--- a/src/app/pages/imprint-page/imprint-page.component.html
+++ b/src/app/pages/imprint-page/imprint-page.component.html
@@ -3,17 +3,20 @@
     <div class="card card-cascade wider reverse my-4">
       <div class="card-body text-center">
 
-        <section class="section feature-box text-left">
+        <section class="section text-left">
 
           <h1>Impressum</h1>
-          <h2>Angaben gem&auml;&szlig; &sect; 5 TMG:</h2>
+          <br>
+          <br>
+          <h4>Angaben gem&auml;&szlig; &sect; 5 TMG:</h4>
           <p>Daniel Sogl
             <br /> Wernerstra&szlig;e 80
             <br /> 71636 Ludwigsburg</p>
-          <h2>Kontakt:</h2>
+          <h4>Kontakt:</h4>
           <p>Telefon: 01775891978
             <br /> E-Mail: mytechde@outlook.com</p>
-          <h2>Haftung f&uuml;r Inhalte</h2>
+          <br>
+          <h4>Haftung f&uuml;r Inhalte</h4>
           <p>Als Diensteanbieter sind wir gem&auml;&szlig; &sect; 7 Abs.1 TMG f&uuml;r eigene Inhalte auf diesen Seiten nach
             den allgemeinen Gesetzen verantwortlich. Nach &sect;&sect; 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht
             verpflichtet, &uuml;bermittelte oder gespeicherte fremde Informationen zu &uuml;berwachen oder nach Umst&auml;nden
@@ -23,7 +26,8 @@
             unber&uuml;hrt. Eine diesbez&uuml;gliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten
             Rechtsverletzung m&ouml;glich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte
             umgehend entfernen.</p>
-          <h2>Haftung f&uuml;r Links</h2>
+          <br>
+          <h4>Haftung f&uuml;r Links</h4>
           <p>Unser Angebot enth&auml;lt Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb
             k&ouml;nnen wir f&uuml;r diese fremden Inhalte auch keine Gew&auml;hr &uuml;bernehmen. F&uuml;r die Inhalte der
             verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten
@@ -31,8 +35,9 @@
             Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar.</p>
           <p>Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung
             nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</p>
-          <h2>
-            Urheberrecht</h2>
+          <br>
+          <h4>
+            Urheberrecht</h4>
           <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht.
             Die Vervielf&auml;ltigung, Bearbeitung, Verbreitung und jede Art der Verwertung au&szlig;erhalb der Grenzen des
             Urheberrechtes bed&uuml;rfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und
@@ -42,13 +47,16 @@
             aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden
             wir derartige Inhalte umgehend entfernen.</p>
 
-          <h2>Registrierfunktion</h2>
+          <br>
+          <h4>Registrierfunktion</h4>
           <p>Die im Rahmen der Registrierung eingegebenen Daten werden für die Zwecke der Nutzung des Angebotes verwendet. Die
             Nutzer können über angebots- oder registrierungsrelevante Informationen, wie Änderungen des Angebotsumfangs oder
             technische Umstände per E-Mail informiert werden. Die erhobenen Daten sind aus der Eingabemaske im Rahmen der
             Registrierung ersichtlich. Dazu gehören E-Mail Adresse, Anschrift, Name und Ihre Telefonnummer.</p>
 
-          <p>Quelle:
+          <br>
+          <br>
+          <p style="font-size: 11px">Quelle:
             <a href="https://www.erecht24.
             de/impressum-generator.html">https://www.e-recht24.de/impressum-generator.html</a>
           </p>
